--- a/views/home.html
+++ b/views/home.html
@@ -73,7 +73,7 @@
         </ul>
       </div>
     </div>
-
+    <br />
     <div class="container mx-auto mb-8">
       <div class="hero rounded-lg p-6 bg-base-200">
         <div class="hero-content text-center">
@@ -87,64 +87,67 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <!--  -->
-      <div class="card w-96 bg-base-100 shadow-xl">
-        <figure>
-          <img
-            class="w-full"
-            src="https://cdn.rebrickable.com/media/sets/001-1.jpg"
-            alt="Shoes"
-          />
-        </figure>
-        <div class="card-body">
-          <h2 class="card-title">Gears</h2>
-          <p>
-            This set was released in America (USA/CAN) by Samsonite in 1965.
-          </p>
-          <div class="card-actions justify-end">
-            <a href="/lego/sets/001-1" class="btn btn-primary">View</a>
+      <br />
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+        <!--  -->
+        <div class="card w-96 bg-base-100 shadow-xl">
+          <figure>
+            <img
+              class="w-full"
+              src="https://cdn.rebrickable.com/media/sets/001-1.jpg"
+              alt="Shoes"
+            />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Gears</h2>
+            <p>
+              This set was released in America (USA/CAN) by Samsonite in 1965.
+            </p>
+            <div class="card-actions justify-end">
+              <a href="/lego/sets/001-1" class="btn btn-primary">View</a>
+            </div>
           </div>
         </div>
-      </div>
-      <!--  -->
-      <!--  -->
-      <div class="card w-96 bg-base-100 shadow-xl">
-        <figure>
-          <img
-            class="w-full h-60"
-            src="https://cdn.rebrickable.com/media/sets/0011-2.jpg"
-            alt="Town Mini-Figures"
-          />
-        </figure>
-        <div class="card-body">
-          <h2 class="card-title">Town Mini-Figures</h2>
-          <p>There are 3 Minifigs in this inventory, with 3 total quantity.</p>
-          <div class="card-actions justify-end">
-            <a href="/lego/sets/0011-2" class="btn btn-primary">View</a>
+        <!--  -->
+        <!--  -->
+        <div class="card w-96 bg-base-100 shadow-xl">
+          <figure>
+            <img
+              class="w-full h-60"
+              src="https://cdn.rebrickable.com/media/sets/0011-2.jpg"
+              alt="Town Mini-Figures"
+            />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Town Mini-Figures</h2>
+            <p>
+              There are 3 Minifigs in this inventory, with 3 total quantity.
+            </p>
+            <div class="card-actions justify-end">
+              <a href="/lego/sets/0011-2" class="btn btn-primary">View</a>
+            </div>
           </div>
         </div>
-      </div>
-      <!--  -->
-      <!--  -->
-      <div class="card w-96 bg-base-100 shadow-xl">
-        <figure>
-          <img
-            class="w-full h-52"
-            src="https://cdn.rebrickable.com/media/sets/0011-3.jpg"
-            alt="Castle 2 for 1 Bonus Offer"
-          />
-        </figure>
-        <div class="card-body">
-          <h2 class="card-title">Castle 2 for 1 Bonus Offer</h2>
-          <p>There are 2 unique sets in this inventory.</p>
-          <div class="card-actions justify-end">
-            <a href="/lego/sets/0011-3" class="btn btn-primary">View</a>
+        <!--  -->
+        <!--  -->
+        <div class="card w-96 bg-base-100 shadow-xl">
+          <figure>
+            <img
+              class="w-full h-52"
+              src="https://cdn.rebrickable.com/media/sets/0011-3.jpg"
+              alt="Castle 2 for 1 Bonus Offer"
+            />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title">Castle 2 for 1 Bonus Offer</h2>
+            <p>There are 2 unique sets in this inventory.</p>
+            <div class="card-actions justify-end">
+              <a href="/lego/sets/0011-3" class="btn btn-primary">View</a>
+            </div>
           </div>
         </div>
+        <!--  -->
       </div>
-      <!--  -->
     </div>
   </body>
 </html>
