--- a/views/home.html
+++ b/views/home.html
@@ -90,7 +90,7 @@
       <br />
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!--  -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure>
             <img
               class="w-full"
@@ -110,7 +110,7 @@
         </div>
         <!--  -->
         <!--  -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure>
             <img
               class="w-full h-60"
@@ -130,7 +130,7 @@
         </div>
         <!--  -->
         <!--  -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card bg-base-100 shadow-xl">
           <figure>
             <img
               class="w-full h-52"
