--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,6 +24,7 @@
       tabindex="0"
       class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
     >
+    <li><a class="<%= (page == "/lego/addSet") ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a></li>
     <li><a class="<%= (page == "/lego/sets") ? 'active' : "" %>" href="/lego/sets">View Collection</a></li>
     <li><a class="<%= (page == "/about") ? 'active' : "" %>" href="/about">About</a></li>
     </ul>
@@ -31,6 +32,7 @@
   <!-- end of responsive nav -->
   <div class="navbar-center hidden sm:flex">
     <ul class="menu menu-horizontal px-1">
+      <li><a class="<%= (page == "/lego/addSet") ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a></li>
       <li><a class="<%= (page == "/lego/sets") ? 'active' : "" %>" href="/lego/sets">View Collection</a></li>
       <li><a class="<%= (page == "/about") ? 'active' : "" %>" href="/about">About</a></li>
     </ul>
