updated about section

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -36,10 +36,9 @@
             Marketing from Toronto Metropolitan Univeristy.
           </p>
           <p>
-            Despite having a Marketing degree from TMU which would launch most
-            people's careers, I decided to pursue Computer Programming because I
-            knew I would regret it if I didn't pursue something which I am
-            passionate about.
+            Despite having a Marketing degree from TMU, I decided to pursue
+            Computer Programming because I knew I would regret it if I didn't
+            pursue something which I am passionate about.
           </p>
           <p>
             I began learning to code in the summer before my first semester at
