--- a/views/set.ejs
+++ b/views/set.ejs
@@ -59,11 +59,13 @@
           <span id="quote"> </span>
           <br />
           <br />
+          <% if(session.user){ %>
           <a
             href="/lego/editSet/<%=set.set_num%>"
             class="btn btn-primary btn-sm"
             >EDIT SET: <%= set.name%></a
           >
+          <% } %>
           <a
             href="#"
             class="btn btn-primary btn-sm"
